...
                        VStack(spacing: 0) {
                            TextField("Email", text: $email)
                                .focused($objectFocused, equals: .email)
                                .textContentType(.emailAddress)
                                .keyboardType(.emailAddress)
                                .padding(.bottom, 10)
                                .accessibility(identifier: "UsernameField")
                            SecureField("Password", text: $password)
                                .focused($objectFocused, equals: .codeword)
                                .textContentType(.password)
                                .keyboardType(.default)
                                .accessibility(identifier: "PasswordField")
                        }
                        .autocorrectionDisabled(true)
                        .textInputAutocapitalization(.never)
                        .foregroundColor(Color("AstroGray"))
                        .multilineTextAlignment(.center)
                        .frame(width: 300)
...
                                    .padding(EdgeInsets(top: 5, leading: 20, bottom: 5, trailing: 20))
                            }
                        )
                        .buttonStyle(.borderedProminent)
                        .padding(.bottom, 20)
                        .disabled(email.isEmpty || password.isEmpty)
                        .accessibility(identifier: "LoginButton")
                    }
                    .background {
                        RoundedRectangle(cornerRadius: 18)
                            .fill(Color(.white))
                            .shadow(color: Color(.systemGray4), radius: 1)
                    }
...
